fixing button overflow when resizing window

--- a/src/components/mainPage/job-section.css
+++ b/src/components/mainPage/job-section.css
@@ -25,9 +25,10 @@
   background-color: white;
   border-radius: 1.8rem;
   color: #0476d9;
-  padding: 2rem 4rem;
+  padding-block: 2rem;
   width: 30%;
   height: 15rem;
+  min-width: 12rem;
   border: white;
   box-shadow: 0 8px 15px rgba(0, 0, 0, 0.2);
 }
@@ -35,6 +36,11 @@
 .jobBtn:hover {
   color: rgb(104, 194, 230);
   box-shadow: 0 8px 15px rgba(0, 0, 0, 0.598);
+}
+
+.description {
+  width: 50%;
+  min-width: 10rem;
 }
 
 .jobType {
@@ -61,14 +67,11 @@
 }
 
 .icon-container {
-  /* box-sizing: border-box; */
   width: 50%;
   height: 60%;
   max-height: 4rem;
   min-width: 3rem;
-  min-height: 3rem;
-
-  /* border: #0476d9 solid 1px; */
+  min-height: 4rem;
   overflow: hidden;
   margin-bottom: 0.7rem;
 }
@@ -82,8 +85,6 @@
 button {
   margin-top: 0;
   color: #00325e;
-
-  /* font-weight: 500; */
   font: bold;
   background-color: white;
   border: 2px solid #03a64a;
